# Automation

./: .gitignore  README.md  conftest.py  docker-compose.yml  index.html  main.py  pyproject.toml
.github/workflows/: test.yml
api_tests/: request_helper.py
config/: config.py  settings.toml
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 10ccd4ad814887b7.txt  1375ebeb5b10e9dc.txt  186e0f98dcbf10ec.txt  1abcfd616410fbd5.txt  1d4b118ef4fe89e3.txt  20648bd6a4cacbe0.txt  2583a487ad983156.txt  261226c43d18a6e1.txt  2c4c988d753cb1b6.txt  2f1485cda3b777ce.txt  3151320ee328c303.txt  32e8d91fcd51ea37.txt  3cc5df824f32314e.txt  3f732e4f39341285.txt  454623f873107828.txt  462fe7bd30683ead.txt  48434c00d52581e.txt  4b7393f3859d9ebd.txt  58944edc6bcd28c4.txt  5bfab23a0aec68cb.txt  630c4ed6d9f40473.txt  631980dcdabed171.txt  6501b24651bc73b0.txt  6995956880a88f93.txt  6c2aa5fe3ccae383.txt  6d538a3792648647.txt  6d7ba1e2a84a8839.txt  6f2c25af4eea12fe.txt  7561295c49d4e622.txt  7cfc94b31c8f0035.txt  7f26ccc472b86978.txt  84ee3f76e5722bd8.txt  873dd08aeb0e2de9.txt  88adcd73cffe257d.txt  (+40 more)
export/: influxDbData.txt  prometheusData.txt
helper/: logger.py
history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
pages/: base_page.py
steps/: cart_steps.py  checkout_steps.py  login_steps.py  main_page_steps.py
tests/: test_users.py
widgets/: behaviors.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+748 files in other folders)
