[tool.poetry]
name = "automation "
version = "0.1.0"
description = ""
authors = ["Yaronmd <yaronmord@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
