[tool.poetry]
name = "automation "
version = "0.1.0"
description = ""
authors = ["Yaronmd <yaronmord@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.4"
requests = "^2.32.3"
selenium = "^4.27.1"
dynaconf = "^3.2.6"
allure-pytest = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
